src/snapshots/monkey_language_server__parser__test__if_expr_4.snap
---
source: src/parser.rs
description: "if (x < y) { x } else { let z = x + y; z }"
expression: stmts
---
[
    If {
        token: Token(If, "if", (0,0)->(0,2)),
        condition: Infix {
            token: Token(LT, "<", (0,6)->(0,7)),
            left: Identifier {
                token: Token(Identifier, "x", (0,4)->(0,5)),
                name: "x",
            },
            right: Identifier {
                token: Token(Identifier, "y", (0,8)->(0,9)),
                name: "y",
            },
        },
        consequence: Block {
            token: Token(LBrace, "{", (0,11)->(0,12)),
            statements: [
                Ok(
                    Identifier {
                        token: Token(Identifier, "x", (0,13)->(0,14)),
                        name: "x",
                    },
                ),
            ],
        },
        alternative: Some(
            Block {
                token: Token(LBrace, "{", (0,22)->(0,23)),
                statements: [
                    Ok(
                        Let {
                            token: Token(Let, "let", (0,24)->(0,27)),
                            name: Identifier {
                                token: Token(Identifier, "z", (0,28)->(0,29)),
                                name: "z",
                            },
                            value: Infix {
                                token: Token(Plus, "+", (0,34)->(0,35)),
                                left: Identifier {
                                    token: Token(Identifier, "x", (0,32)->(0,33)),
                                    name: "x",
                                },
                                right: Identifier {
                                    token: Token(Identifier, "y", (0,36)->(0,37)),
                                    name: "y",
                                },
                            },
                        },
                    ),
                    Ok(
                        Identifier {
                            token: Token(Identifier, "z", (0,39)->(0,40)),
                            name: "z",
                        },
                    ),
                ],
            },
        ),
    },
]
